--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
 creating a sso php to use raspberry-pi as a thin client connect to AD for authentication
+REQUIREMENTS
+have a raspberry pi preinstalled with lamp and freerdp for connection rdp to your TSE
